# barne-tv

./: .env.example  .gitignore  README.md  STORY-4.2-TEST-RESULTS.md  coverage.json  nginx.conf  pyproject.toml  pytest.ini  test-story-4.2.html
backend/: __init__.py  auth.py  config.py  exceptions.py  logging_config.py  main.py  middleware.py  routes.py
backend/db/: __init__.py  init_db.py  maintenance.py  queries.py  schema.sql  seed_test_data.py
backend/services/: __init__.py  content_source.py  viewing_session.py
docs/: architecture.md  front-end-spec.md  getting-started-no.md  operations-guide-no.md  prd.md  youtube-api-setup.md
docs/architecture/: README.md  accessibility-implementation.md  api-specification.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  development-workflow.md  document-status.md  error-handling-strategy.md  external-apis.md  frontend-api-client-configuration.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  monitoring-and-observability.md  security-implementation.md  security-summary.md  source-tree.md  table-of-contents.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: checklist-results-report.md  epic-1-foundation-infrastructure.md  epic-2-child-viewing-experience.md  epic-3-parent-features-history.md  epic-4-time-limits-enhancements.md  epic-5-deployment-production-readiness.md  epic-overview.md  goals-and-background-context.md  implementation-notes.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/qa/: e2e-test-results-final-story-3.1.md  e2e-test-results-story-3.1-3.2-playwright.md  e2e-test-results-story-3.1-3.2.md  manual-testing-4.3-grace-flow.md
docs/qa/assessments/: 1.2-test-design-20251018.md  1.2-youtube-api-setup-risk-20251018.md  1.3-youtube-api-integration-risk-20251018.md  1.3-youtube-api-integration-test-design-20251018.md  1.4-test-design-20251019.md  1.5-test-design-20251019.md  2.1-test-design-20251022.md  2.2-test-design-20251025.md  2.3-test-design-20251028.md  3.1-test-design-20251029.md  3.X-test-design-20251031.md  (+11 more)
docs/stories/: 1.1.project-foundation.md  1.2.youtube-api-setup.md  1.3.youtube-api-integration.md  1.4.basic-admin-authentication.md  1.5.channel-management.md  1.X.testing-infrastructure.md  1.Y.frontend-foundation.md  1.Z.design-system-completion.md  2.1.child-friendly-video-grid.md  2.2.video-playback.md  2.3.security-and-seo-prevention.md  3.1-implementation-status.md  3.1.watch-history-manual-replay.md  3.2.configuration-settings-interface.md  3.X.admin-help-documentation.md  4.1.time-based-viewing-limits.md  4.2.progressive-warnings-winddown.md  4.3.grace-video-mascot-integration.md  4.4.engagement-based-smart-selection.md  4.5.audio-feedback-system.md  5.1.production-server-setup.md  5.2.systemd-service-configuration.md  5.3.deployment-scripts-automation.md  5.4.monitoring-maintenance-setup.md  5.5-operations-guide-no.md
frontend/: .prettierignore  README.md  eslint.config.js  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/src/: admin.js  child.js  main.css  sample.test.js
frontend/templates/: base.html
frontend/test-results/: .last-run.json
scripts/: README.md  backup.sh  check-health.sh  dashboard.sh  deploy.sh  hetzner-cloud-config.yaml  logrotate-youtube-viewer  nginx-config.conf  restore.sh  verify-server-setup.sh  verify-service.sh
scripts/systemd/: youtube-viewer-backup.service  youtube-viewer-backup.timer  youtube-viewer.service
tests/: conftest.py  test-story-4.2.spec.js
tests/backend/: conftest.py  test_admin_history.py  test_admin_settings.py  test_auth.py  test_health.py  test_routes_grace.py  test_routes_limit.py  test_weighted_selection.py
tests/e2e/: grace-video-flow.spec.js
tests/integration/: conftest.py  test_api_integration.py  test_video_playback.py  test_youtube_api.py
(+91 files in other folders)
