[project]
name = "safe-youtube-viewer"
version = "1.0.0"
description = "Safe YouTube video viewer for kids with parental controls"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "jinja2==3.1.3",
    "google-api-python-client==2.113.0",
    "requests==2.31.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "isodate==0.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "pytest-benchmark==4.0.0",
    "responses==0.24.1",
    "black==24.1.0",
    "ruff==0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
