[project]
name = "safe-youtube-viewer"
version = "1.0.0"
description = "Safe YouTube video viewer for kids with parental controls"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.118.0",
    "uvicorn[standard]==0.37.0",
    "jinja2==3.1.6",
    "google-api-python-client==2.184.0",
    "requests==2.32.5",
    "bcrypt>=4.2.1",
    "python-multipart==0.0.20",
    "isodate==0.7.2",
    "python-dotenv==1.1.1",
    "slowapi==0.1.9",  # Rate limiting for FastAPI
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
    "pytest-cov==7.0.0",
    "pytest-benchmark==5.1.0",
    "responses==0.25.8",
    "httpx==0.27.0",
    "black==25.9.0",
    "ruff==0.14.0",
    "mypy==1.15.0",
    "freezegun==1.5.1",  # Time mocking for unit tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
